[gd_scene load_steps=2 format=3 uid="uid://c2wfwll0wlota"]

[ext_resource type="Script" path="res://addons/card_engine/editor/new_script_dialog.gd" id="1_yscll"]

[node name="NewScriptDialog" type="ConfirmationDialog"]
initial_position = 2
title = "New Ability Script"
size = Vector2i(371, 118)
script = ExtResource("1_yscll")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 363.0
offset_bottom = 69.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "script_name"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.388235, 0.321569, 1)
horizontal_alignment = 1

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
